# epub2audio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Feature.md  LICENSE  PLAN.md  README.md  pyproject.toml
.pi/: settings.json  settings.json.broken
.pi-subagents/artifacts/: 0a8908f8_audio-engineer_input.md  0a8908f8_audio-engineer_transcript.jsonl  1661cf79_reviewer_input.md  1661cf79_reviewer_meta.json  1661cf79_reviewer_output.md  1661cf79_reviewer_transcript.jsonl  1c1e0740-fb23-40bc-97eb-96bfb528188d_reviewer_input.md  1c1e0740-fb23-40bc-97eb-96bfb528188d_reviewer_meta.json  1c1e0740-fb23-40bc-97eb-96bfb528188d_reviewer_output.md  1c1e0740-fb23-40bc-97eb-96bfb528188d_reviewer_transcript.jsonl  2dee634a-2e8b-4127-9f39-be9ce683e160_reviewer_input.md  2dee634a-2e8b-4127-9f39-be9ce683e160_reviewer_meta.json  2dee634a-2e8b-4127-9f39-be9ce683e160_reviewer_output.md  2dee634a-2e8b-4127-9f39-be9ce683e160_reviewer_transcript.jsonl  40638117-8eeb-4acd-b1ff-2345d39c4731_orchestrator_input.md  40638117-8eeb-4acd-b1ff-2345d39c4731_orchestrator_meta.json  40638117-8eeb-4acd-b1ff-2345d39c4731_orchestrator_transcript.jsonl  52bb0e75-3362-4124-9c7f-a6a962497831_tts-engineer_input.md  52bb0e75-3362-4124-9c7f-a6a962497831_tts-engineer_meta.json  52bb0e75-3362-4124-9c7f-a6a962497831_tts-engineer_transcript.jsonl  605210f6-db6c-421e-892e-77e9ba87bec2_audio-engineer_0_input.md  605210f6-db6c-421e-892e-77e9ba87bec2_audio-engineer_0_meta.json  605210f6-db6c-421e-892e-77e9ba87bec2_audio-engineer_0_output.md  605210f6-db6c-421e-892e-77e9ba87bec2_audio-engineer_0_transcript.jsonl  605210f6-db6c-421e-892e-77e9ba87bec2_reviewer_2_input.md  605210f6-db6c-421e-892e-77e9ba87bec2_reviewer_2_meta.json  605210f6-db6c-421e-892e-77e9ba87bec2_reviewer_2_output.md  605210f6-db6c-421e-892e-77e9ba87bec2_reviewer_2_transcript.jsonl  605210f6-db6c-421e-892e-77e9ba87bec2_tester_1_input.md  605210f6-db6c-421e-892e-77e9ba87bec2_tester_1_meta.json  605210f6-db6c-421e-892e-77e9ba87bec2_tester_1_output.md  605210f6-db6c-421e-892e-77e9ba87bec2_tester_1_transcript.jsonl  657cc528-7105-4489-a9c0-0affc4508c24_tts-engineer_input.md  657cc528-7105-4489-a9c0-0affc4508c24_tts-engineer_meta.json  657cc528-7105-4489-a9c0-0affc4508c24_tts-engineer_output.md  657cc528-7105-4489-a9c0-0affc4508c24_tts-engineer_transcript.jsonl  7d95854f-df21-43d7-b2b0-c8c038260e19_architect_input.md  7d95854f-df21-43d7-b2b0-c8c038260e19_architect_meta.json  7d95854f-df21-43d7-b2b0-c8c038260e19_architect_output.md  7d95854f-df21-43d7-b2b0-c8c038260e19_architect_transcript.jsonl  (+55 more)
.pi/agents/: architect.md  audio-engineer.md  epub-engineer.md  orchestrator.md  reviewer.md  tester.md  tts-engineer.md
.pi/prompts/: review-branch.md  run-verification.md  start-milestone.md
docs/: agent-workflow.md  architecture.md  product-spec.md  roadmap.md  status.md
docs/decisions/: 001-audiochunk-frozen-exception.md  002-m4b-output-format.md  003-narration-pipeline.md  004-provider-request-location.md  005-pronunciation-subsystem.md  006-validation-models.md  007-output-both-and-config.md  README.md
examples/: epub2audio.toml  pronunciations.yaml
src/epub2audio/: __init__.py  cli.py  config.py  errors.py  models.py
tasks/: backlog.md
tasks/completed/: DEFECT-001-navigation-toc-not-iterable.md  DEFECT-002-chapter-word-count-zero-for-long-docs.md  DEFECT-003-segment-resume-not-persisted.md  DEFECT-004-finalize-chapters-not-wired.md  DEFECT-005-ffmpeg-loudnorm-exit234-skip-guards.md  M1-architect.md  M1-epub-engineer.md  M1-tester.md  M2-audio-engineer.md  M2-tester.md  M2-tts-engineer.md  M3-tester.md  M3-tts-engineer.md  M4-audio-engineer.md  M4-reviewer.md  M4-tester.md  M5-epub-engineer.md  M5-reviewer.md  M5-tester.md  M6-audio-engineer.md  M6-docs-engineer.md  M6-reviewer.md  M6-tester.md  M7-architect.md  M7-audio-engineer.md  M7-reviewer.md  M7-tester.md  PRE-01.md  PRE-02.md
tests/: conftest.py  test_config.py  test_e2e.py  test_e2e_both.py  test_e2e_m4b.py
tests/audio/: test_chapters_meta.py  test_encode.py  test_encode_aac.py  test_validate_m4b.py
tests/director/: __init__.py  test_components.py  test_plan.py  test_scene_analysis.py
tests/epub/: test_chapter_merge.py  test_chapter_split.py  test_chapters.py  test_cleanup_fragments.py  test_footnote_and_frontmatter.py  test_metadata.py  test_navigation.py
tests/fixtures/: builders.py  simple_epub2.epub  simple_epub3.epub
tests/pipeline/: conftest.py  test_converter_resume.py  test_manifest.py  test_resume.py  test_segment_resume.py
tests/pronunciation/: __init__.py  test_default_lexicon.py  test_director_integration.py  test_lexicon.py  test_pipeline_wiring.py
tests/providers/: __init__.py  test_boundary.py  test_kokoro_adapter.py  test_pipeline_integration.py  test_stub_providers.py
tests/text/: test_normalize.py  test_segment.py
tests/tts/: test_kokoro_smoke.py  (+1 more)
(+59 files in other folders)
