[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epub2audio"
version = "0.1.0"
description = "Convert EPUB ebooks to audiobooks using local Kokoro TTS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "epub2audio contributors" }]
keywords = ["epub", "audiobook", "tts", "kokoro", "text-to-speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "soundfile>=0.12",
    "numpy>=1.26",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
tts = [
    "kokoro>=0.9",
    "misaki>=0.9",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-beautifulsoup4",
]

[project.scripts]
epub2audio = "epub2audio.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/epub2audio"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["epub2audio"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/epub2audio"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that need real dependencies",
    "requires_model: marks tests that need Kokoro model files downloaded",
]
